kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: LoadBalancer
  ports:    
    - name: proxied-tcp-1883
      port: 1883
      targetPort: 1883
      protocol: TCP
    - name: proxied-tcp-8883
      port: 8883
      targetPort: 8883
      protocol: TCP
    - name: proxied-tcp-5684
      port: 5684
      targetPort: 5684
      protocol: TCP
    - name: proxied-tcp-5683
      port: 5683
      targetPort: 5683
      protocol: UDP
    - name: proxied-tcp-5883
      port: 5883
      targetPort: 5883
      protocol: UDP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
